去掉pid，以及去掉pwm内定时器，以及Motor_Forward()函数覆盖还有main里的pwm

--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\ERAZER\Desktop\stm32_project\STM32_Winter_Camp-main\project.uvprojx
-Project File Date:  02/04/2026
+D:\code\STM32_Winter_Camp\project.uvprojx
+Project File Date:  02/06/2026
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -66,7 +66,7 @@ compiling Ultrasound.c...
 compiling IRSensor.c...
 compiling PID.c...
 linking...
-Program Size: Code=7420 RO-data=268 RW-data=12 ZI-data=1708  
+Program Size: Code=6112 RO-data=268 RW-data=12 ZI-data=1636  
 ".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
 *** Performing Cross-Module-Optimization:
@@ -95,13 +95,12 @@ compiling stm32f10x_spi.c...
 compiling stm32f10x_tim.c...
 compiling stm32f10x_usart.c...
 compiling stm32f10x_wwdg.c...
-compiling pwm.c...
 compiling delay.c...
 compiling led.c...
 compiling oled.c...
 compiling PID.c...
 linking...
-Program Size: Code=7420 RO-data=268 RW-data=12 ZI-data=1708  
+Program Size: Code=6112 RO-data=268 RW-data=12 ZI-data=1636  
 ".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 *** Completed Cross-Module-Optimization after 2 iteration(s).
 
@@ -117,7 +116,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.4.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:43
+Build Time Elapsed:  00:00:41
 </pre>
 </body>
 </html>
